Fixed Gradle Bugs